@@ -1,0 +1,7 @@
+CORE
+package2.sv
+
+^^\[.*\] always main\.Q == 123: PROVED$
+^EXIT=0$
+^SIGNAL=0$
+--
