@@ -250,6 +250,7 @@ IREP_ID_ONE(verilog_class)
 IREP_ID_ONE(verilog_module)
 IREP_ID_ONE(verilog_package)
 IREP_ID_ONE(verilog_package_import)
+IREP_ID_ONE(verilog_package_scope)
 IREP_ID_ONE(verilog_program)
 IREP_ID_ONE(verilog_udp)
 IREP_ID_ONE(module_source)
